refined the video bg and added audio player and twitter feed to page

--- a/drawing-fowls.html
+++ b/drawing-fowls.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>D.F. Podcast</title>
         <link rel="stylesheet" href="./css/style.css"/>
+        <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
     </head>
     <body>
         <header class="v-header container">
@@ -14,12 +15,43 @@
             </div>
             <div class="header-overlay"></div>
             <div class="header-content">
-                <h1>Welcome!</h1>
-                <p>Lorem ipsum dolor sit amet consectetur 
-                    adipisicing elit. Corporis unde nemo, obcaecati ipsam nostrum 
-                    placeat velit. Ipsam sit magni veritatis!</p>
+                <h1>Welcome</h1>
                 <a href="#" class="btn">Listen Here</a>
             </div>
         </header>
+            <!-- <div class="podcast-player">
+                <img class="img1" src="images/DF-ball.svg" alt="DF-logo"/>          
+                <audio class="audio1" controls>
+                    <source src="audio/df-test.mp3" type="audio/mpeg">
+                    Your browser does not support the audio tag.
+                </audio>
+                <div class="iphone-container">
+                    <div class="iphone">
+                        <div class="feed">
+                            <a class="twitter-timeline" href="https://twitter.com/DrawingFowls?ref_src=twsrc%5Etfw" data-width="175"
+                            data-height="390" data-chrome="noscrollbar nofooter">Tweets by DrawingFowls</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+            <div class="master-podcast-player-wrapper">
+                <div class="podcast-logo-wrapper">
+                    <img class="podcast-logo" src="images/DF-ball.svg" alt="DF-logo"/>
+                </div>
+                <div class="twitter-feed-wrapper">
+                    <div class="iphone">
+                        <div class="feed">
+                            <a class="twitter-timeline" href="https://twitter.com/DrawingFowls?ref_src=twsrc%5Etfw" data-width="100%"
+                            data-height="100%" data-chrome="noscrollbar nofooter">Tweets by DrawingFowls</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
+                    </div>
+                </div>
+                <div class="audio-player-wrapper">
+                    <audio class="audio-player" controls>
+                        <source src="audio/df-test.mp3" type="audio/mpeg">
+                        Your browser does not support the audio tag.
+                    </audio>
+                </div>
+            </div>
     </body>
 </html>
