--- a/drawing-fowls.html
+++ b/drawing-fowls.html
@@ -16,7 +16,7 @@
             <div class="header-overlay"></div>
             <div class="header-content">
                 <h1>Welcome</h1>
-                <a href="#" class="btn">Listen Here</a>
+                <a href="#podcast-player" class="btn">Enter Here</a>
             </div>
         </header>
             <!-- <div class="podcast-player">
@@ -34,7 +34,10 @@
                     </div>
                 </div>
             </div> -->
-            <div class="master-podcast-player-wrapper">
+
+
+            
+            <!-- <div class="master-podcast-player-wrapper">
                 <div class="podcast-logo-wrapper">
                     <img class="podcast-logo" src="images/DF-ball.svg" alt="DF-logo"/>
                 </div>
@@ -51,6 +54,27 @@
                         <source src="audio/df-test.mp3" type="audio/mpeg">
                         Your browser does not support the audio tag.
                     </audio>
+                </div>
+            </div> -->
+
+            <!--Anchor tag takes user to the section of the page with the podcast player and twitter feed-->
+            <a name="podcast-player"></a>
+
+            <div class="container2">
+                <div class="div1">
+                    <div class="inner-div1-1"><img class="podcast-logo" src="images/DF-ball.svg" alt="DF-logo"/></div>
+                    <div class="inner-div1-2">
+                        <audio class="audio-player" controls>
+                            <source src="audio/df-test.mp3" type="audio/mpeg">
+                            Your browser does not support the audio tag.
+                        </audio>
+                    </div>
+                </div>
+                <div class="div2">
+                    <img class="iphone-1" src="images/iphone.svg" alt="iphone-template"/>
+
+                    <a class="twitter-timeline" href="https://twitter.com/DrawingFowls?ref_src=twsrc%5Etfw" data-width="36%"
+                    data-height="95%" data-chrome="noscrollbar nofooter">Tweets by DrawingFowls</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
             </div>
     </body>
